remove the user-guide and edit content of facility-admin

--- a/post-detail.html
+++ b/post-detail.html
@@ -230,20 +230,20 @@
                             <img src="./images/backend-post-detail/Updating-your-Facility-Profile.gif" width="677" class="section-img" alt="">
                             <div id="sub-section5" class="sub-section">
                                 <p class="subsection-title">User Tab</p>
-                                <p class="subsection-desc"><strong>Business Logo:</strong> Upload your business logo here, recommended dimensions and file type are XXX</p>
+                                <p class="subsection-desc"><strong>Business Logo:</strong> Upload your business logo here, recommended dimensions 500px x 500px and file extention is jpeg.</p>
                                 <img src="./images/backend-post-detail/User-tab--Business-Logo.png" width="677" class="section-img" alt="">
-                                <p class="subsection-desc"><strong>Business banner:</strong> Upload your business banner here recommended dimensions and file type are XXX</p>
+                                <p class="subsection-desc"><strong>Business banner:</strong> Upload your business banner here recommended dimensions 720px x 480px and file extention is jpeg.</p>
                                 <img src="./images/backend-post-detail/User-tab--Business-Banner.png" width="677" class="section-img" alt="">
                                 <p class="subsection-desc"><strong>Business information:</strong> Here you can put a description of your business or facility.</p>
                                 <img src="./images/backend-post-detail/User-tab--Business-Information.png" width="677" class="section-img" alt="">
-                                <p class="subsection-desc"><strong>Website:</strong> Enter your business’ website url here</p>
+                                <p class="subsection-desc"><strong>Website:</strong> Enter your business’ website url here.</p>
                                 <img src="./images/backend-post-detail/User-tab--Website-URL.png" width="677" class="section-img" alt="">
-                                <p class="subsection-desc"><strong>Terms and Conditions:</strong> Here you can upload a Terms & Conditions document that will be emailed to participants with booking confirmation. Please upload in PDF Format no larger than 500kb.</p>
-                                <p class="subsection-desc"><strong>Phone:</strong> Enter your business’ phone number here</p>
+                                <p class="subsection-desc"><strong>Terms and Conditions:</strong> Here you can upload a Terms & Conditions document that will be emailed to participants with booking confirmation. Please upload in PDF format no larger than 500kb.</p>
+                                <p class="subsection-desc"><strong>Phone:</strong> Enter your business’ phone number here.</p>
                                 <img src="./images/backend-post-detail/User-tab--Phone.png" width="677" class="section-img" alt="">
                                 <p class="subsection-desc"><strong>Category:</strong> Here you can select what kind of business you are and what specific activity types you offer. These categories will be used in the booking application so frontend users can find the type of activities they are looking for.</p>
                                 <img src="./images/backend-post-detail/User-tab--Category.png" width="677" class="section-img" alt="">
-                                <p class="subsection-desc">All other input fields are not required and are used by HQ admin only. Please leave the following fields blank: Firstname - Lastname - Gender - DOB</p>
+                                <p class="subsection-desc">All other input fields are not required and are used by HQ admin only. Please leave the following fields blank: Firstname - Lastname - Gender - DOB.</p>
                             </div>
                             <div id="sub-section6" class="sub-section">
                                 <p class="subsection-title">Contact Tab</p>
@@ -252,14 +252,14 @@
                             </div>
                             <div id="sub-section7" class="sub-section">
                                 <p class="subsection-title">Address Tab</p>
-                                <p class="subsection-desc">Please enter the business address for your facility, this is where user will come to participate in classes.</p>
+                                <p class="subsection-desc">Please enter the business address for your facility, this is where users will come to participate in classes.</p>
                                 <img src="./images/backend-post-detail/Address-tab.png" width="677" class="section-img" alt="">
                             </div>
                             <div id="sub-section8" class="sub-section">
                                 <p class="subsection-title">Gallery Tab</p>
                                 <p class="subsection-desc">Here you can upload images of your facility and classes for users to see in the frontend booking application.</p>
-                                <p class="subsection-desc">Please note that you are representing a government entity, and any uploaded images must adhere to strict guidelines set by DTCM. Any breach of these guidelines will.</p>
-                                <p class="subsection-desc">We ask you to upload images no larger than 1mb</p>
+                                <p class="subsection-desc">Please note that you are representing a government entity, and any uploaded images must adhere to strict guidelines set by DTCM.</p>
+                                <p class="subsection-desc">We ask you to upload images no larger than 1mb.</p>
                                 <img src="./images/backend-post-detail/Gallery-Tab.png" width="677" class="section-img" alt="">
                             </div>
                         </div>
@@ -287,16 +287,16 @@
                             <div id="sub-section10" class="sub-section">
                                 <p class="subsection-title">Finding a class</p>
                                 <p class="subsection-desc">To find a class first navigate to the dashboard view for managing bookings, do this by clicking on the home icon in the top left of the screen.</p>
-                                <p class="subsection-desc">Once here, the dashboard will show you all the bookings scheduling for the current day. You can change this to the next 7-30 days with the grey buttons at the top of the screen and even select a specific day in the calendar.</p>
+                                <p class="subsection-desc">Once here, the dashboard will show you all the bookings scheduled for the current day. You can change this to the next 7-30 days with the grey buttons at the top of the screen and even select a specific day in the calendar.</p>
                                 <p class="subsection-desc">You can also search for an activity name using the ‘Choose Activity’ filter on the left hand side.</p>
                                 <img src="./images/backend-post-detail/Maaning-Booking--Finding-Class.gif" width="677" class="section-img" alt="">
                             </div>
                             <div id="sub-section11" class="sub-section">
                                 <p class="subsection-title">Checking in users</p>
                                 <p class="subsection-desc">Once you have found your desired class, you can check in the user by clicking on the ‘User’ icon to the right of the class.</p>
-                                <p class="subsection-desc">This will bring up a menu where you can search for a users name,email or phone number.</p>
+                                <p class="subsection-desc">This will bring up a menu where you can search for a user's name, email or phone number.</p>
                                 <p class="subsection-desc">Once you have found the user you’d like to check in click the ‘Tick Icon’ on the far right of the screen and confirm your choice.</p>
-                                <p class="subsection-desc">This will turn the tick green next to the users name and will signify that the user is checked in.</p>
+                                <p class="subsection-desc">This will turn the tick green next to the user's name and will signify that the user is checked in.</p>
                                 <img src="./images/backend-post-detail/Managing-bookings--Checking-in-users.gif" width="677" class="section-img" alt="">
                             </div>
                             <div id="sub-section12" class="sub-section">
@@ -306,8 +306,8 @@
                             </div>
                             <div id="sub-section13" class="sub-section">
                                 <p class="subsection-title">Editing class time & capacity</p>
-                                <p class="subsection-desc">To edit the the capacity or time of a class select the ‘Pencil Icon’</p>
-                                <p class="subsection-desc">This will bring up a menu, change the desired details and click ‘Update’</p>
+                                <p class="subsection-desc">To edit the capacity or time of a class select the ‘Pencil Icon’.</p>
+                                <p class="subsection-desc">This will bring up a menu, change the desired details and click ‘Update’.</p>
                                 <img src="./images/backend-post-detail/Managing-bookings--Editing-class-time-capacity.gif" width="677" class="section-img" alt="">
                             </div>
                             <div id="sub-section14" class="sub-section">
@@ -321,7 +321,7 @@
                                 <p class="subsection-title">Creating & Selecting an Instructor</p>
                                 <p class="subsection-desc">To create an instructor profile, navigate to the menu on the left hand side, click ‘User’ > ‘Instructor’ and ‘Add new’.</p>
                                 <p class="subsection-desc">Enter the instructor's name and click ‘Save’.</p>
-                                <p class="subsection-desc">Navigate back to the dashboard and use the drop down menu to select a user for a specific class.</p>
+                                <p class="subsection-desc">Navigate back to the dashboard and use the drop-down menu to select a user for a specific class.</p>
                                 <img src="./images/backend-post-detail/Managing-bookings--Creating-and-selecting-instructor.gif" width="677" class="section-img" alt="">
                             </div>
                         </div>
@@ -330,16 +330,16 @@
                             <div id="sub-section17" class="sub-section">
                                 <p class="subsection-title">Creating a class</p>
                                 <p class="subsection-desc">To create a class first you must create an ‘Activity’ and activity ‘zone’.</p>
-                                <p class="subsection-desc"><em>To find out how to create an activity <a href="#sub-section19">click here</a></em></p>
-                                <p class="subsection-desc"><em>To find out how to create a zone <a href="#sub-section18">click here</a></em></p>
+                                <p class="subsection-desc"><em>To find out how to create an activity <a href="#sub-section19">click here</a></em>.</p>
+                                <p class="subsection-desc"><em>To find out how to create a zone <a href="#sub-section18">click here</a></em>.</p>
                                 <p class="subsection-desc">Once these are created, in the left hand panel select ‘Schedule’ > ‘Schedule’ again > then ‘Add new’.</p>
                                 <p class="subsection-desc">You will then be prompted to input the event details.</p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class.gif" width="677" class="section-img" alt="">
-                                <p class="subsection-desc"><strong>Facility:</strong> Select your facility from the drop down box</p>
+                                <p class="subsection-desc"><strong>Facility:</strong> Select your facility from the drop-down box.</p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class--Facility.png" width="677" class="section-img" alt="">
-                                <p class="subsection-desc"><strong>Zone:</strong> Select the zone your activity will take place in, eg. HIIT Studio 1</p>
+                                <p class="subsection-desc"><strong>Zone:</strong> Select the zone your activity will take place in, eg. HIIT Studio 1.</p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class--Zone.png" width="677" class="section-img" alt="">
-                                <p class="subsection-desc"><strong>Instructions file:</strong> Instructions files are PDF’s that are attached to the users booking confirmation email. These can contain extra information about the activity such as what to bring and where to park. Instruction files are optional but recommended. Find out more about instruction files <a href="#sub-section20">here</a>.</p>
+                                <p class="subsection-desc"><strong>Instructions file:</strong> Instructions files are PDFs that are attached to the users booking confirmation email. These can contain extra information about the activity such as what to bring and where to park. Instruction files are optional but recommended. Find out more about instruction files <a href="#sub-section20">here</a>.</p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class--Instruction-file.png" width="677" class="section-img" alt="">
                                 <p class="subsection-desc"><strong>Activity:</strong> Select the activity that you created for the class.</p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class--Activity.png" width="677" class="section-img" alt="">
@@ -348,11 +348,11 @@
                                 <p class="subsection-desc"><strong>Start Date/End Date:</strong> Start Date/Time is where you input the start date of your class. If your class is a one off activity select the end date as the same date.</p>
                                 <p class="subsection-desc">If your class is a recurring class you can set the end date in the future to when the last class will end.</p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class--Start-Date-time.png" width="677" class="section-img" alt="">
-                                <p class="subsection-desc"><strong>Recurrence:</strong> For recurring classes, you can select which days of the week your class will be running. For example if your class runs every monday for 4 weeks, you can select monday in recurrence and set your end date to 4 weeks after the start date.</p>
+                                <p class="subsection-desc"><strong>Recurrence:</strong> For recurring classes, you can select which days of the week your class will be running. For example if your class runs every Monday for 4 weeks, you can select Monday in recurrence and set your end date to 4 weeks after the start date.</p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class--Recurrence.png" width="677" class="section-img" alt="">
                                 <p class="subsection-desc"><strong>Duration:</strong> This is how long your class will last in minutes.</p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class--Duration.png" width="677" class="section-img" alt="">
-                                <p class="subsection-desc"><strong>Offer online:</strong> If your class is an online class please check this box</p>
+                                <p class="subsection-desc"><strong>Offer online:</strong> If your class is an online class, please check this box.</p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class--Online.png" width="677" class="section-img" alt="">
                                 <p class="subsection-desc"><strong>Slots:</strong> This is how many users can attend your class.</p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class--slots.png" width="677" class="section-img" alt="">
@@ -378,8 +378,8 @@
                             </div>
                             <div id="sub-section20" class="sub-section">
                                 <p class="subsection-title">Instructions File</p>
-                                <p class="subsection-desc">Instructions files are PDF’s that are attached to the users booking confirmation email. These can contain extra information about the activity such as what to bring and where to park. Instruction files are optional but recommended.</p>
-                                <p class="subsection-desc">Please upload your Instruction file in PDF Format with a file size no larger than 500kb.</p>
+                                <p class="subsection-desc">Instructions files are PDFs that are attached to the users booking confirmation email. These can contain extra information about the activity such as what to bring and where to park. Instruction files are optional but recommended.</p>
+                                <p class="subsection-desc">Please upload your Instruction file in PDF format with a file size no larger than 500kb.</p>
                                 <img src="./images/backend-post-detail/Scheduling-Class--Creating-Class--Instruction-file.png" width="677" class="section-img" alt="">
                             </div>
                         </div>
@@ -418,11 +418,11 @@
                         <li class="">
                             <a href="https://dfc.coredirection.com/activity-listing" target="_blank">Activity Listings</a>
                         </li>
-                        <li class="">
+                        <!-- <li class="">
                             <a href="./index.html">Frontend User Guides</a>
-                        </li>
+                        </li> -->
                         <li class="">
-                            <a href="./facility-admin.html">Facility Admin User Guide</a>
+                            <a href="./index.html">Facility Admin User Guide</a>
                         </li>
                     </ul>
                 </div>
