--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             </a>
                             <a href="./post-detail.html#section2" class="card">
                                 <div class="card-header">
-                                    <img src="./images/card-img-01.png" class="card-img" alt="">
+                                    <img src="./images/facility-admin/card-img-05.jpeg" class="card-img" alt="">
                                 </div>
                                 <div class="card-body">
                                     <p class="card-title">Attendance reporting</p>
