--- a/post-detail.html
+++ b/post-detail.html
@@ -282,14 +282,14 @@
                                 <p class="subsection-desc"><strong></strong></p>
                                 <p class="subsection-desc"><strong></strong></p>
                                 <p class="subsection-desc"><strong></strong></p> -->
-                                <img src="./images/backend-post-detail/Managing-bookings--Dashboard overview.png" width="677" class="section-img" alt="">
+                                <img src="./images/backend-post-detail/Managing-bookings--Dashboard-overview.png" width="677" class="section-img" alt="">
                             </div>
                             <div id="sub-section10" class="sub-section">
                                 <p class="subsection-title">Finding a class</p>
                                 <p class="subsection-desc">To find a class first navigate to the dashboard view for managing bookings, do this by clicking on the home icon in the top left of the screen.</p>
                                 <p class="subsection-desc">Once here, the dashboard will show you all the bookings scheduled for the current day. You can change this to the next 7-30 days with the grey buttons at the top of the screen and even select a specific day in the calendar.</p>
                                 <p class="subsection-desc">You can also search for an activity name using the ‘Choose Activity’ filter on the left hand side.</p>
-                                <img src="./images/backend-post-detail/Maaning-Booking--Finding-Class.gif" width="677" class="section-img" alt="">
+                                <img src="./images/backend-post-detail/Managing-Booking--Finding-Class.gif" width="677" class="section-img" alt="">
                             </div>
                             <div id="sub-section11" class="sub-section">
                                 <p class="subsection-title">Checking in users</p>
